--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.0.0",
+    "axios": "^1.5.1",
     "tailwindcss": "^3.3.3"
   }
 }
